<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_new_feed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_new_feed" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_messenger"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_messenger" />

    <item
        android:id="@+id/navigation_manager"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_manager" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_more" />

</menu>
